--- a/dbBus/dbBus.csproj
+++ b/dbBus/dbBus.csproj
@@ -2,6 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <PackageVersion>1.0.1</PackageVersion>
+    <Authors>Sebastian Bucko</Authors>
+    <Owners>Sebastian Bucko</Owners>
+    <PackageProjectUrl>https://github.com/sbc77/dbBus</PackageProjectUrl>
+    <Title>dbBus</Title>
+    <Description>Simple messaging framework with database as transport layer.</Description>
+    <PackageId>dbBus</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,6 +17,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
+    <PackageReference Include="NuGet.Build.Packaging" Version="0.2.0" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="BusExtensions.cs" />
