--- a/Extensions/dbBus.Extensions.AspNetCore/dbBus.Extensions.AspNetCore.csproj
+++ b/Extensions/dbBus.Extensions.AspNetCore/dbBus.Extensions.AspNetCore.csproj
@@ -1,14 +1,23 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\dbBus\dbBus.csproj" />
-    <ProjectReference Include="..\..\dbBus.Core\dbBus.Core.csproj" />
-  </ItemGroup>
+    <PropertyGroup>
+        <TargetFramework>netstandard2.0</TargetFramework>
+        <PackOnBuild>true</PackOnBuild>
+        <PackageVersion>1.0.3</PackageVersion>
+        <Authors>Sebastian Bucko</Authors>
+        <Description>AspNetCore extension for dbBus messaging framework.</Description>
+        <PackageLicenseUrl>https://raw.githubusercontent.com/sbc77/dbBus/master/LICENSE</PackageLicenseUrl>
+        <Owners>Sebastian Bucko</Owners>
+        <PackageProjectUrl>https://github.com/sbc77/dbBus</PackageProjectUrl>
+        <Title>dbBus.Extensions.AspNetCore</Title>
+        <PackageId>dbBus.Extensions.AspNetCore</PackageId>
+    </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
+        <PackageReference Include="NuGet.Build.Packaging" Version="0.2.0" />
+    </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\..\dbBus\dbBus.csproj" />
+        <ProjectReference Include="..\..\dbBus.Core\dbBus.Core.csproj" />
+    </ItemGroup>
 </Project>
