--- a/Examples/dbBus.AspNet/dbBus.AspNet.csproj
+++ b/Examples/dbBus.AspNet/dbBus.AspNet.csproj
@@ -1,18 +1,15 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
-  <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
-    <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
-  </PropertyGroup>
-
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\Extensions\dbBus.Extensions.AspNetCore\dbBus.Extensions.AspNetCore.csproj" />
-    <ProjectReference Include="..\..\Extensions\dbBus.Extensions.Mssql\dbBus.Extensions.Mssql.csproj" />
-  </ItemGroup>
+    <PropertyGroup>
+        <TargetFramework>netcoreapp2.2</TargetFramework>
+        <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.App" />
+        <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\..\Extensions\dbBus.Extensions.AspNetCore\dbBus.Extensions.AspNetCore.csproj" />
+        <ProjectReference Include="..\..\Extensions\dbBus.Extensions.Mssql\dbBus.Extensions.Mssql.csproj" />
+    </ItemGroup>
 </Project>
