--- a/Extensions/dbBus.Extensions.Mssql/dbBus.Extensions.Mssql.csproj
+++ b/Extensions/dbBus.Extensions.Mssql/dbBus.Extensions.Mssql.csproj
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <PackOnBuild>true</PackOnBuild>
-        <PackageVersion>1.0.6</PackageVersion>
+        <PackageVersion>1.0.7</PackageVersion>
         <Authors>Sebastian Bucko</Authors>
         <Description>Mssql extension for dbBus messaging framework.</Description>
         <PackageLicenseUrl>https://raw.githubusercontent.com/sbc77/dbBus/master/LICENSE</PackageLicenseUrl>
@@ -13,7 +13,7 @@
         <PackageId>dbBus.Extensions.Mssql</PackageId>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="TheOne.OrmLite.SqlServer" Version="0.0.8" />
+        <PackageReference Include="TheOne.OrmLite.SqlServer" Version="0.1.0" />
         <PackageReference Include="NuGet.Build.Packaging" Version="0.2.2" />
     </ItemGroup>
     <ItemGroup>
