gitignore updated, auto package generation on build

--- a/Extensions/dbBus.Extensions.Sqlite/dbBus.Extensions.Sqlite.csproj
+++ b/Extensions/dbBus.Extensions.Sqlite/dbBus.Extensions.Sqlite.csproj
@@ -11,6 +11,7 @@
         <PackageProjectUrl>https://github.com/sbc77/dbBus</PackageProjectUrl>
         <Title>dbBus.Extensions.Sqlite</Title>
         <PackageId>dbBus.Extensions.Sqlite</PackageId>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
     <ItemGroup>
         <ProjectReference Include="..\..\dbBus.Core\dbBus.Core.csproj" />
